--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  host: localhost
 
 development:
   <<: *default
